[feat] create Mapper

--- a/build.gradle
+++ b/build.gradle
@@ -37,11 +37,14 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
+	implementation 'org.apache.ibatis:ibatis-core:3.0'
+	implementation 'org.apache.ibatis:ibatis-sqlmap:2.3.4.726'
 }
 
 test {
