[feat] add mybatis dependencies
- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter/2.2.0 compile dependencies...

--- a/build.gradle
+++ b/build.gradle
@@ -38,13 +38,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
-	implementation 'org.apache.ibatis:ibatis-core:3.0'
-	implementation 'org.apache.ibatis:ibatis-sqlmap:2.3.4.726'
 }
 
 test {
