--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,10 +11,10 @@ spring:
 
 mybatis:
   type-aliases-package: com.mkkang.mbti_with_music.domain
-  mappper-locations: mappers/*.xml
+  mapper-locations: mappers/*.xml
   configuration:
-    multiple-result-sets-enabled: false
-    map-underscore-to-camel-case: true
+    # multiple-result-sets-enabled: false
+    # map-underscore-to-camel-case: true
     call-setters-on-nulls: true
     jdbc-type-for-null: varchar
     default-fetch-size: 500
