--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ dependencies {
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.6.1'
 	implementation 'org.projectreactor:reactor-spring:1.0.1.RELEASE'
+	implementation group: 'org.json', name: 'json', version: '20090211'
+	implementation 'com.google.code.gson:gson:2.8.7'
 }
 
 test {
