--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/mbti_music
+    url: jdbc:mariadb://db:3306/mbti_music
     driverClassName: org.mariadb.jdbc.Driver
     username: root
     password: mariadb
