--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,5 +1,5 @@
 FROM dockermkkang/mbti_db:0.4
 
-ENV MARIADB_USER=mbti_music
-ENV MARIADB_PASSWORD=mbti_music
-ENV MARIADB_ROOT_PASSWORD=mariadb
+ENV MARIADB_USER=mbti_music \
+    MARIADB_PASSWORD=mbti_music \
+    MARIADB_ROOT_PASSWORD=mariadb
