--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 	implementation 'org.projectreactor:reactor-spring:1.0.1.RELEASE'
 	implementation group: 'org.json', name: 'json', version: '20090211'
 	implementation 'com.google.code.gson:gson:2.8.7'
+	implementation 'org.springframework.session:spring-session-jdbc:2.3.0.RELEASE'
+
 }
 
 test {
