--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,10 @@ spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/mbti_music
     driverClassName: org.mariadb.jdbc.Driver
-    username: root
-    password: mariadb
+    username: mbti_music
+    password: mbti_music
+  session:
+    store-type: jdbc
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
@@ -23,4 +25,4 @@ mybatis:
     default-fetch-size: 500
 
 server:
-  port: 5000
+  port: 4000
