--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
     driverClassName: org.mariadb.jdbc.Driver
     username: mbti_music
     password: mbti_music
+  session:
+    store-type: jdbc
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
