--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 HELP.md
 .gradle
-build
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -36,5 +35,5 @@ out/
 ### VS Code ###
 .vscode/
 
-**/src/main/resources/application-KEY.yml
+application-KEY.yml
 **/src/main/resources/META-INF
